--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\abuse\Documents\Programacion\Iconos\visualstudiocode_93981.ico,0
+IconResource=C:\Users\abuse\Desktop\repositorio\VisualCode\iconos\visualstudiocode_93981.ico,0
 [ViewState]
 Mode=
 Vid=
