--- a/python/python/alembic.ini
+++ b/python/python/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root@localhost/pecerapy
+sqlalchemy.url = mysql://root:root@localhost/pecerapy
 
 
 [post_write_hooks]
